Ajout d'un projet Ouerise

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                     <div id="about-name" class="col-lg-8 offset-lg-2">
                         <h2 class="text-white mb-4">Kilian MINETTO</h2>
                         <p class="text-white-50 text-center">
-                            Jeune développeur web de 22 ans, je suis depuis le 16 septembre 2020 en formation
-                            professionnelle en tant que développeur web àl'Access Code School à Belfort, opéré par Onlineformapro.
+                            Jeune développeur web de 22 ans, j'ai effectué une formation Designer Web au sein de l'Access Code School de Belfort du 16 septembre 2020
+                            au 10 mai 2021.
                             Passionné par l'univers de l'informatique, je m'intéresse beaucoup aux nouvelles technologies
                             notamment les langages web.
                             J'ai pour objectif de devenir développeur fullstack.
@@ -97,28 +97,57 @@
                 <!-- Featured Project Row-->
                 <div class="row align-items-center no-gutters mb-4 mb-lg-5">
                     <div class="col-xl-8 col-lg-7">
-                        <a href="https://kilianm.promo-45.codeur.online/equality" target="_blank">
-                            <img class="img-fluid mb-3 mb-lg-0" src="assets/img/Equality.PNG" alt="Image du projet Abyss" />
+                        <a href="https://ouerise.promo-45.codeur.online/" target="_blank">
+                            <img class="img-cover img-fluid mb-3 mb-lg-0" src="assets/img/Ouerise.jpg" alt="Image du projet Ouerise" />
                         </a>
                     </div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
-                            <h4>Equality</h4>
+                            <h4>Ouerise</h4>
                             <p class="text-black-50 mb-2">
-                                Site wordpress, visant à sensibiliser contre l'inégalité des salaires homme/femme, et à
-                                l'accès des femmes à des postes à responsabilités.
+                                Projet de groupe développé avec Symfony et Vue.JS <br>
+                                objectifs: <br>
+                                Dans ce projet collaboratif, nous avons dû créer un site de consomation d' API: <br>
+                                1. Établir la charte graphique. <br>
+                                2. Développer avec le Content management Framework Symfony. <br>
+                                3. Utilisation du framework Vue.js. <br>
                             </p>
                             <p class="mb-2">Liens du projet :</p>
-                            <a href="https://kilianm.promo-45.codeur.online/equality" target="_blank" class="mx-2"><i class="fas fa-globe"></i></a>
-                            <a href="https://github.com/KMinetto/equality" target="_blank" class="mx-2"><i class="fab fa-github"></i></a>
+                            <a href="https://ouerise.promo-45.codeur.online/" target="_blank" class="mx-2"><i class="fas fa-globe"></i></a>
+                            <a href="https://github.com/KMinetto/ouerise" target="_blank" class="mx-2"><i class="fab fa-github"></i></a>
                         </div>
                     </div>
                 </div>
-                <!-- Project two Row-->
+
+                <div class="row justify-content-center no-gutters mb-3">
+                    <div class="col-lg-6">
+                        <a href="https://kilianm.promo-45.codeur.online/equality/" target="_blank">
+                            <img height="320px" class="img-cover img-fluid" src="assets/img/Equality.PNG" alt="Image du projet wordpress equality"/>
+                        </a>
+                    </div>
+                    <div class="col-lg-6 order-lg-first">
+                        <div class="bg-black text-center h-100 project">
+                            <div class="d-flex h-100">
+                                <div class="project-text w-100 py-auto text-center text-lg-right">
+                                    <h4 class="text-white">Equality</h4>
+                                    <p class="mb-2 text-white-50">
+                                        Site wordpress, visant à sensibiliser contre l'inégalité des salaires homme/femme, et à
+                                        l'accès des femmes à des postes à responsabilités.
+                                    </p>
+                                    <p class="mb-2 text-white-50">Liens du projet :</p>
+                                    <a class="mx-2" href="https://kilianm.promo-45.codeur.online/equality" target="_blank"><i class="fas fa-globe"></i></a>
+                                    <a class="mx-2" href="https://github.com/KMinetto/equaltiy" target="_blank"><i class="fab fa-github"></i></a>
+                                    <hr class="d-none d-lg-block mb-0 mr-0" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="row justify-content-center no-gutters mb-3">
                     <div class="col-lg-6">
                         <a href="https://kilianm.promo-45.codeur.online/abyss/" target="_blank">
-                            <img height="350px" class="img-fluid" src="assets/img/Abyss.PNG" alt=""/>
+                            <img height="350px" class="img-cover img-fluid" src="assets/img/Abyss.PNG" alt=""/>
                         </a>
                     </div>
                     <div class="col-lg-6">
@@ -140,11 +169,11 @@
                         </div>
                     </div>
                 </div>
-                <!-- Project two Row-->
+
                 <div class="row justify-content-center no-gutters mb-3">
                     <div class="col-lg-6">
                         <a href="https://kilianm.promo-45.codeur.online/NetflixLike/" target="_blank">
-                            <img height="320px" class="img-fluid" src="assets/img/NetflixLike.PNG" alt=""/>
+                            <img height="320px" class="img-cover img-fluid" src="assets/img/NetflixLike.PNG" alt=""/>
                         </a>
                     </div>
                     <div class="col-lg-6 order-lg-first">
@@ -165,11 +194,11 @@
                         </div>
                     </div>
                 </div>
-                <!-- Project one Row-->
+
                 <div class="row justify-content-center no-gutters mb-3">
                     <div class="col-lg-6">
                         <a href="https://kilianm.promo-45.codeur.online/Design&Develop/" target="_blank">
-                            <img height="320px" class="img-fluid" src="assets/img/Design.PNG" alt=""/>
+                            <img height="320px" class="img-cover img-fluid" src="assets/img/Design.PNG" alt=""/>
                         </a>
                     </div>
                     <div class="col-lg-6">
@@ -190,11 +219,11 @@
                         </div>
                     </div>
                 </div>
-                <!-- Project two Row-->
+
                 <div class="row justify-content-center no-gutters mb-3">
                     <div class="col-lg-6">
                         <a href="https://kilianm.promo-45.codeur.online/Mathematic/" target="_blank">
-                            <img height="320px" class="img-fluid" src="assets/img/Multiplication.PNG" alt=""/>
+                            <img height="320px" class="img-cover img-fluid" src="assets/img/Multiplication.PNG" alt=""/>
                         </a>
                     </div>
                     <div class="col-lg-6 order-lg-first">
@@ -215,11 +244,11 @@
                         </div>
                     </div>
                 </div>
-                <!-- Project three Row-->
+
                 <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
                     <div class="col-lg-6">
                         <a href="https://kilianm.promo-45.codeur.online/Mark/" target="_blank">
-                            <img height="289px" class="img-fluid" src="assets/img/Mark.PNG" alt="" />
+                            <img height="289px" class="img-cover img-fluid" src="assets/img/Mark.PNG" alt="" />
                         </a>
                     </div>
                     <div class="col-lg-6">
@@ -239,6 +268,7 @@
                         </div>
                     </div>
                 </div>
+
             </div>
         </section>
         <!-- Slider -->
