Ajout de nouveaux projets

--- a/index.html
+++ b/index.html
@@ -97,46 +97,42 @@
                 <!-- Featured Project Row-->
                 <div class="row align-items-center no-gutters mb-4 mb-lg-5">
                     <div class="col-xl-8 col-lg-7">
-                        <a href="https://ouerise.promo-45.codeur.online/" target="_blank">
-                            <img class="img-cover img-fluid mb-3 mb-lg-0" src="assets/img/Ouerise.jpg" alt="Image du projet Ouerise" />
+                        <a href="https://ecommerceudemy.kilian-minetto.fr" target="_blank">
+                            <img class="img-cover img-fluid mb-3 mb-lg-0" src="assets/img/little-accounting.PNG" alt="Image du projet Little-Accounting"/>
                         </a>
                     </div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
-                            <h4>Ouerise</h4>
+                            <h4>Little-Accounting <small>(Work In Progress)</small></h4>
                             <p class="text-black-50 mb-2">
-                                Projet de groupe développé avec Symfony et Vue.JS <br>
+                                Projet ElectronJs<br>
                                 objectifs: <br>
-                                Dans ce projet collaboratif, nous avons dû créer un site de consomation d' API: <br>
-                                1. Établir la charte graphique. <br>
-                                2. Développer avec le Content management Framework Symfony. <br>
-                                3. Utilisation du framework Vue.js. <br>
+                                Développer une application Desktop de comptabilité pour un client (fictif) <br>
                             </p>
                             <p class="mb-2">Liens du projet :</p>
-                            <a href="https://ouerise.promo-45.codeur.online/" target="_blank" class="mx-2"><i class="fas fa-globe"></i></a>
-                            <a href="https://github.com/KMinetto/ouerise" target="_blank" class="mx-2"><i class="fab fa-github"></i></a>
+                            <!-- <a href="https://ecommerceudemy.kilian-minetto.fr" target="_blank" class="mx-2"><i class="fas fa-globe"></i></a>-->
+                            <a href="https://github.com/KMinetto/Little-Accounting" target="_blank" class="mx-2"><i class="fab fa-github"></i></a>
                         </div>
                     </div>
                 </div>
 
                 <div class="row justify-content-center no-gutters mb-3">
                     <div class="col-lg-6">
-                        <a href="https://kilianm.promo-45.codeur.online/equality/" target="_blank">
-                            <img height="320px" class="img-cover img-fluid" src="assets/img/Equality.PNG" alt="Image du projet wordpress equality"/>
+                        <a href="https://design-develop.kilian-minetto.fr" target="_blank">
+                            <img height="320px" class="img-cover img-fluid" src="assets/img/ecommerceUdemy.jpg" alt=""/>
                         </a>
                     </div>
-                    <div class="col-lg-6 order-lg-first">
+                    <div class="col-lg-6">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 py-auto text-center text-lg-right">
-                                    <h4 class="text-white">Equality</h4>
+                                    <h4 class="text-white">EcommerceUdemy&Develop <small>(Work In Progress)</small></h4>
                                     <p class="mb-2 text-white-50">
-                                        Site wordpress, visant à sensibiliser contre l'inégalité des salaires homme/femme, et à
-                                        l'accès des femmes à des postes à responsabilités.
+                                        Projet Symfony d'un site e-commerce, avec l'utilisation de MailJet et Stripe
                                     </p>
                                     <p class="mb-2 text-white-50">Liens du projet :</p>
-                                    <a class="mx-2" href="https://kilianm.promo-45.codeur.online/equality" target="_blank"><i class="fas fa-globe"></i></a>
-                                    <a class="mx-2" href="https://github.com/KMinetto/equaltiy" target="_blank"><i class="fab fa-github"></i></a>
+                                    <a class="mx-2" href="https://ecommerceudemy.kilian-minetto.fr" target="_blank"><i class="fas fa-globe"></i></a>
+                                    <a class="mx-2" href="https://github.com/KMinetto/ecommerceudemy" target="_blank"><i class="fab fa-github"></i></a>
                                     <hr class="d-none d-lg-block mb-0 mr-0" />
                                 </div>
                             </div>
@@ -146,11 +142,11 @@
 
                 <div class="row justify-content-center no-gutters mb-3">
                     <div class="col-lg-6">
-                        <a href="https://kilianm.promo-45.codeur.online/abyss/" target="_blank">
+                        <a href="https://abyss.kilian-minetto.fr" target="_blank">
                             <img height="350px" class="img-cover img-fluid" src="assets/img/Abyss.PNG" alt=""/>
                         </a>
                     </div>
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 order-lg-first">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 py-auto text-center text-lg-right">
@@ -161,7 +157,7 @@
                                         pour faire les routes.
                                     </p>
                                     <p class="mb-2 text-white-50">Liens du projet :</p>
-                                    <a class="mx-2" href="https://kilianm.promo-45.codeur.online/abyss" target="_blank"><i class="fas fa-globe"></i></a>
+                                    <a class="mx-2" href="https://abyss.kilian-minetto.fr" target="_blank"><i class="fas fa-globe"></i></a>
                                     <a class="mx-2" href="https://github.com/nath-pvr/Abyss" target="_blank"><i class="fab fa-github"></i></a>
                                     <hr class="d-none d-lg-block mb-0 mr-0" />
                                 </div>
@@ -172,32 +168,7 @@
 
                 <div class="row justify-content-center no-gutters mb-3">
                     <div class="col-lg-6">
-                        <a href="https://kilianm.promo-45.codeur.online/NetflixLike/" target="_blank">
-                            <img height="320px" class="img-cover img-fluid" src="assets/img/NetflixLike.PNG" alt=""/>
-                        </a>
-                    </div>
-                    <div class="col-lg-6 order-lg-first">
-                        <div class="bg-black text-center h-100 project">
-                            <div class="d-flex h-100">
-                                <div class="project-text w-100 py-auto text-center text-lg-right">
-                                    <h4 class="text-white">Projet CRUD <small>(Work in progress)</small></h4>
-                                    <p class="mb-2 text-white-50">
-                                        Projet réalisé en PHP et MySQL, il permet à un utilisateur de pouvoir ajouter,
-                                        supprimer ou modifier un film.
-                                    </p>
-                                    <p class="mb-2 text-white-50">Liens du projet :</p>
-                                    <a class="mx-2" href="https://kilianm.promo-45.codeur.online/NetflixLike" target="_blank"><i class="fas fa-globe"></i></a>
-                                    <a class="mx-2" href="https://github.com/KMinetto/NetflixLike" target="_blank"><i class="fab fa-github"></i></a>
-                                    <hr class="d-none d-lg-block mb-0 mr-0" />
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row justify-content-center no-gutters mb-3">
-                    <div class="col-lg-6">
-                        <a href="https://kilianm.promo-45.codeur.online/Design&Develop/" target="_blank">
+                        <a href="https://design-develop.kilian-minetto.fr" target="_blank">
                             <img height="320px" class="img-cover img-fluid" src="assets/img/Design.PNG" alt=""/>
                         </a>
                     </div>
@@ -211,7 +182,7 @@
                                         informatique qui montre les projets réalisés, propose des services etc...
                                     </p>
                                     <p class="mb-2 text-white-50">Liens du projet :</p>
-                                    <a class="mx-2" href="https://kilianm.promo-45.codeur.online/Design&Develop" target="_blank"><i class="fas fa-globe"></i></a>
+                                    <a class="mx-2" href="https://design-develop.kilian-minetto.fr" target="_blank"><i class="fas fa-globe"></i></a>
                                     <a class="mx-2" href="https://github.com/KMinetto/Design-Develop" target="_blank"><i class="fab fa-github"></i></a>
                                     <hr class="d-none d-lg-block mb-0 mr-0" />
                                 </div>
@@ -222,53 +193,28 @@
 
                 <div class="row justify-content-center no-gutters mb-3">
                     <div class="col-lg-6">
-                        <a href="https://kilianm.promo-45.codeur.online/Mathematic/" target="_blank">
-                            <img height="320px" class="img-cover img-fluid" src="assets/img/Multiplication.PNG" alt=""/>
+                        <a href="https://multiplication.kilian-minetto.fr" target="_blank">
+                            <img height="320px" class="img-cover img-fluid" src="assets/img/movie-app.PNG" alt="Image du site Movie app"/>
                         </a>
                     </div>
                     <div class="col-lg-6 order-lg-first">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 py-auto text-center text-lg-right">
-                                    <h4 class="text-white">Tables de Multiplication</h4>
+                                    <h4 class="text-white">Movie app</h4>
                                     <p class="mb-2 text-white-50">
-                                        Projet réalisé en PHP, ce site est un site de révision des tables de multiplication.
-                                        Il permet aussi de tester ses connaissances, avec des calculs générés aléatoirement.
+                                        Projet réalisé avec Nuxt.js, ce projet est un site qui référencie des films, et
+                                        donnes des informations complémentaires lorsque l'on clique sur un film.
                                     </p>
                                     <p class="mb-2 text-white-50">Liens du projet :</p>
-                                    <a class="mx-2" href="https://kilianm.promo-45.codeur.online/Mathematic" target="_blank"><i class="fas fa-globe"></i></a>
-                                    <a class="mx-2" href="https://github.com/KMinetto/Mathematic" target="_blank"><i class="fab fa-github"></i></a>
+                                    <a class="mx-2" href="https://movie-app.kilian-minetto.fr" target="_blank"><i class="fas fa-globe"></i></a>
+                                    <a class="mx-2" href="https://github.com/KMinetto/Movie-App" target="_blank"><i class="fab fa-github"></i></a>
                                     <hr class="d-none d-lg-block mb-0 mr-0" />
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-
-                <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-                    <div class="col-lg-6">
-                        <a href="https://kilianm.promo-45.codeur.online/Mark/" target="_blank">
-                            <img height="289px" class="img-cover img-fluid" src="assets/img/Mark.PNG" alt="" />
-                        </a>
-                    </div>
-                    <div class="col-lg-6">
-                        <div class="bg-black text-center h-100 project">
-                            <div class="d-flex h-100">
-                                <div class="project-text w-100 my-auto text-center text-lg-left">
-                                    <h4 class="text-white">Mark</h4>
-                                    <p class="mb-2 text-white-50">
-                                        Premier projet d'intégration. C'est un projet où j'ai pu découvrir Bootstrap
-                                    </p>
-                                    <p class="mb-2 text-white-50">Liens du projet :</p>
-                                    <a class="mx-2" href="https://kilianm.promo-45.codeur.online/Mark/" target="_blank"><i class="fas fa-globe"></i></a>
-                                    <a class="mx-2" href="https://github.com/KMinetto/Mark" target="_blank"><i class="fab fa-github"></i></a>
-                                    <hr class="d-none d-lg-block mb-0 ml-0" />
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
             </div>
         </section>
         <!-- Slider -->
