--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <!-- Featured Project Row-->
                 <div class="row align-items-center no-gutters mb-4 mb-lg-5">
                     <div class="col-xl-8 col-lg-7">
-                        <a href="https://ecommerceudemy.kilian-minetto.fr" target="_blank">
+                        <a href="https://guthub.com/Little-Accounting" target="_blank">
                             <img class="img-cover img-fluid mb-3 mb-lg-0" src="assets/img/little-accounting.PNG" alt="Image du projet Little-Accounting"/>
                         </a>
                     </div>
@@ -118,8 +118,8 @@
 
                 <div class="row justify-content-center no-gutters mb-3">
                     <div class="col-lg-6">
-                        <a href="https://design-develop.kilian-minetto.fr" target="_blank">
-                            <img height="320px" class="img-cover img-fluid" src="assets/img/ecommerceUdemy.jpg" alt=""/>
+                        <a href="https://ecommerceudemy.kilian-minetto.fr" target="_blank">
+                            <img height="320px" class="img-cover img-fluid" src="assets/img/ecommerceUdemy.jpg" alt="Image du site Soie Chic"/>
                         </a>
                     </div>
                     <div class="col-lg-6">
@@ -193,7 +193,7 @@
 
                 <div class="row justify-content-center no-gutters mb-3">
                     <div class="col-lg-6">
-                        <a href="https://multiplication.kilian-minetto.fr" target="_blank">
+                        <a href="https://movie-app.kilian-minetto.fr" target="_blank">
                             <img height="320px" class="img-cover img-fluid" src="assets/img/movie-app.PNG" alt="Image du site Movie app"/>
                         </a>
                     </div>
