--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <!-- Featured Project Row-->
                 <div class="row align-items-center no-gutters mb-4 mb-lg-5">
                     <div class="col-xl-8 col-lg-7">
-                        <a href="https://github.com/Little-Accounting" target="_blank">
+                        <a href="https://github.com/KMinetto/Little-Accounting" target="_blank">
                             <img class="img-cover img-fluid mb-3 mb-lg-0" src="assets/img/little-accounting.PNG" alt="Image du projet Little-Accounting"/>
                         </a>
                     </div>
