Ajout d'Open Graph

--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Kilian MINETTO | Portfolio</title>
+        <!-- OpenGraph -->
+        <meta property="og:title" content="Portfolio | Kilian MINETTO" />
+        <meta property="og:description" content="Découvrez le parcours professionnel de Kilian MINETTO, ainsi que ses
+        différents projets" />
+        <meta property="og:type" content="article" />
+        <meta property="og:url" content="https://kilian-minetto.fr/" />
+        <meta property="og:image" content="assets/img/portfolio.PNG" />
+        <!-- OpenGraph end -->
+        <!-- TwitterCard -->
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:site" content="https://kilian-minetto.fr/">
+        <meta name="twitter:creator" content="Kilian MINETTO">
+        <meta name="twitter:title" content="Portfolio | Kilian MINETTO">
+        <meta name="twitter:description" content="Découvrez le parcours professionnel de Kilian MINETTO, ainsi que ses
+        différents projets">
+        <meta name="twitter:image" content="assets/img/portfolio.PNG">
+        <!-- Twitter Card End -->
         <link rel="shortcut icon" href="assets/img/Logo Kilian - 128 x 128.png" type="image/x-icon">
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
