--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 py-auto text-center text-lg-right">
-                                    <h4 class="text-white">EcommerceUdemy&Develop <small>(Work In Progress)</small></h4>
+                                    <h4 class="text-white">Sois'Chic <small>(Work In Progress)</small></h4>
                                     <p class="mb-2 text-white-50">
                                         Projet Symfony d'un site e-commerce, avec l'utilisation de MailJet et Stripe
                                     </p>
