Modification Open Graph

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         différents projets" />
         <meta property="og:type" content="article" />
         <meta property="og:url" content="https://kilian-minetto.fr/" />
-        <meta property="og:image" content="assets/img/portfolio.PNG" />
+        <meta property="og:image" content="https://kilian-minetto.fr/assets/img/portfolio.PNG" />
         <!-- OpenGraph end -->
         <!-- TwitterCard -->
         <meta name="twitter:card" content="summary_large_image">
@@ -21,7 +21,7 @@
         <meta name="twitter:title" content="Portfolio | Kilian MINETTO">
         <meta name="twitter:description" content="Découvrez le parcours professionnel de Kilian MINETTO, ainsi que ses
         différents projets">
-        <meta name="twitter:image" content="assets/img/portfolio.PNG">
+        <meta name="twitter:image" content="https://kilian-minetto.fr/assets/img/portfolio.PNG">
         <!-- Twitter Card End -->
         <link rel="shortcut icon" href="assets/img/Logo Kilian - 128 x 128.png" type="image/x-icon">
         <!-- Font Awesome icons (free version)-->
